[gd_scene load_steps=44 format=3 uid="uid://cb46co0m8f53s"]

[ext_resource type="Script" path="res://DogPlayerFSM/Doggy.gd" id="1_njf21"]
[ext_resource type="Texture2D" uid="uid://bwotynnxhce0s" path="res://art/Player/dogattack-Sheet.png" id="2_dx8ja"]
[ext_resource type="Texture2D" uid="uid://d0tvs2eft04eb" path="res://art/Player/dogidlev2-Sheet.png" id="2_lkn1a"]
[ext_resource type="Script" path="res://DogPlayerFSM/AnimationController.gd" id="3_ai8m0"]
[ext_resource type="Script" path="res://DogPlayerFSM/PlayerStateMachine.gd" id="3_bn38j"]
[ext_resource type="Script" path="res://DogPlayerFSM/IdleState.gd" id="4_bagpv"]
[ext_resource type="Texture2D" uid="uid://c2nqpycfu27b2" path="res://art/Player/dogjumpv2-Sheet.png" id="4_rgvto"]
[ext_resource type="Script" path="res://DogPlayerFSM/RunState.gd" id="5_2emg4"]
[ext_resource type="Script" path="res://DogPlayerFSM/AirState.gd" id="6_byrm8"]
[ext_resource type="Texture2D" uid="uid://b5po54oukvgdx" path="res://art/Player/dogrunv2-Sheet-Sheet.png" id="6_tnkgg"]
[ext_resource type="Script" path="res://DogPlayerFSM/JumpState.gd" id="6_xn3d4"]
[ext_resource type="Texture2D" uid="uid://00qmhyxfxtbp" path="res://art/Interface Elements/Doghealthbar.png" id="8_0s17w"]
[ext_resource type="Script" path="res://DogPlayerFSM/AirStrafeState.gd" id="8_hmtvs"]
[ext_resource type="Script" path="res://DogPlayerFSM/PlayerHealth.gd" id="9_hr7x4"]
[ext_resource type="Script" path="res://DogPlayerFSM/Physics Components.gd" id="9_jumxf"]
[ext_resource type="Texture2D" uid="uid://d3vgymbbynr62" path="res://art/Interface Elements/Doghealthbarprogress.png" id="9_xy2ls"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/hurtbox_components.gd" id="14_w4005"]

[sub_resource type="Theme" id="Theme_f4cmb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2f71"]
size = Vector2(45, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3c7c"]
atlas = ExtResource("2_dx8ja")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4re1r"]
atlas = ExtResource("2_dx8ja")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaw4u"]
atlas = ExtResource("2_dx8ja")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvboy"]
atlas = ExtResource("4_rgvto")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bybh"]
atlas = ExtResource("4_rgvto")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk4p5"]
atlas = ExtResource("4_rgvto")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdby"]
atlas = ExtResource("4_rgvto")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu031"]
atlas = ExtResource("4_rgvto")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xudjg"]
atlas = ExtResource("2_lkn1a")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4vk0"]
atlas = ExtResource("2_lkn1a")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pkdd"]
atlas = ExtResource("2_lkn1a")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6es7b"]
atlas = ExtResource("4_rgvto")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7hvt"]
atlas = ExtResource("6_tnkgg")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtjjt"]
atlas = ExtResource("6_tnkgg")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbdrp"]
atlas = ExtResource("6_tnkgg")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt3r1"]
atlas = ExtResource("6_tnkgg")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w43b4"]
atlas = ExtResource("6_tnkgg")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwry8"]
atlas = ExtResource("6_tnkgg")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ompmq"]
atlas = ExtResource("6_tnkgg")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvy75"]
atlas = ExtResource("2_dx8ja")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgl6f"]
atlas = ExtResource("2_dx8ja")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg4bg"]
atlas = ExtResource("2_dx8ja")
region = Rect2(128, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2mux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3c7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4re1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw4u")
}],
"loop": false,
"name": &"bite_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvboy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bybh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk4p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu031")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xudjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4vk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pkdd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6es7b")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7hvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtjjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbdrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt3r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w43b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwry8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ompmq")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvy75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgl6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg4bg")
}],
"loop": true,
"name": &"wave_attack",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q66eg"]
radius = 24.0

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("anim", "physics", "health_component", "hurtbox_component") groups=["player"]]
collision_mask = 0
script = ExtResource("1_njf21")
anim = NodePath("AnimatedSprite2D")
physics = NodePath("Physics Components")
health_component = NodePath("Health Components")
hurtbox_component = NodePath("Hurtbox Components")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="UI"]
unique_name_in_owner = true
offset_right = 200.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_f4cmb")
value = 100.0
texture_under = ExtResource("8_0s17w")
texture_progress = ExtResource("9_xy2ls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_q2f71")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
position = Vector2(4, -16)
sprite_frames = SubResource("SpriteFrames_i2mux")
animation = &"bite_attack"
script = ExtResource("3_ai8m0")
player = NodePath("..")

[node name="Physics Components" type="Node" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("9_jumxf")
player = NodePath("..")
jump_height = 100.0
jump_time_to_peak = 0.5
jump_time_to_fall = 0.4
acceleration = 450.0
friction = 1000.0
max_speed = 300.0

[node name="Health Components" type="Node" parent="." node_paths=PackedStringArray("CharacterBody")]
script = ExtResource("9_hr7x4")
health_max = 100
CharacterBody = NodePath("..")

[node name="PlayerStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_bn38j")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_bagpv")

[node name="RunState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_2emg4")
player = NodePath("../..")

[node name="AirState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_byrm8")
player = NodePath("../..")

[node name="JumpState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_xn3d4")
player = NodePath("../..")

[node name="AirStrafeState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_hmtvs")

[node name="Hurtbox Components" type="Area2D" parent="." node_paths=PackedStringArray("health_components")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 144
script = ExtResource("14_w4005")
health_components = NodePath("../Health Components")
damage = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Components"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_q66eg")

[connection signal="died" from="Health Components" to="." method="_on_health_components_died"]
[connection signal="took_damage" from="Health Components" to="." method="_on_health_components_took_damage"]
[connection signal="state_changed" from="PlayerStateMachine" to="AnimatedSprite2D" method="_on_player_state_machine_state_changed"]
[connection signal="body_entered" from="Hurtbox Components" to="Hurtbox Components" method="_on_body_entered"]
